--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
     outline: none;
     border: none;
     text-decoration: none;
-    text-transform: capitalize;
     transition: all 0.2s linear;
     font-family: 'Fira Sans', sans-serif;
 }
@@ -59,7 +58,7 @@ html {
 }
 
 section {
-    padding: 3rem 9%;
+    padding: 3rem;
 }
 
 header {
@@ -115,24 +114,36 @@ html {
 
 .home .home-slid .box .content {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    bottom: 20px;
+    left: 70px;
+    padding: 20px;
     color: var(--min-color);
-    text-align: center;
+    text-align: left;
+    width: 38%;
+    height: 45%;
+}
+
+.home .home-slid .box .content {
+    padding-left: 30PX;
 }
 
 .home .home-slid .box .content h3 {
     font-size: 4rem;
+    margin-bottom: 10px;
 }
 
-.home .home-slid .box .content p {
-    font-size: 2.5rem;
-    margin: 1rem 0;
+.home .home-slid .box .content a.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #FFCA00;
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.5rem;
+    margin-top: 10px;
 }
 
 .about {
-    background: #eee;
+    background: #ffffff;
 }
 
 .about .box {
@@ -144,13 +155,17 @@ html {
 }
 
 .about .box .image img {
-    width: 60rem;
-    height: 100%;
+    width: 414px;
+    height: 414px;
     object-fit: cover;
 }
 
-.about .box .content h3 {
-    color: var(--th-color);
+.about .box .content {
+    margin-left: 15rem;
+}
+
+.about .box .content h2 {
+    color: #703BE7;
     font-size: 3.5rem;
 }
 
@@ -165,92 +180,43 @@ html {
     font-size: 2.2rem;
 }
 
-.services .row {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
-    gap: 0.8rem;
-    margin-top: 5rem;
+.about1 {
+    background: #ffffff;
 }
 
-.services .row .box {
-    text-align: center;
-    color: var(--th-color);
-    padding: 4rem;
-    border-radius: 0.8rem;
-}
-
-.services .row .box:hover {
-    box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
-    background: #eee;
-}
-
-.services .row .box i {
-    font-size: 5rem;
-}
-
-.services .row .box h3 {
-    font-size: 2.5rem;
-    margin: 1.5rem 0;
-}
-
-.services .row .box p {
-    font-size: 2rem;
-}
-
-.contact .box {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
-    gap: 2rem;
-    text-align: center;
-}
-
-.contact .box i {
-    font-size: 3.8rem;
-    color: var(--sc-color);
-}
-
-.contact .box div {
-    font-size: 2rem;
-    color: var(--th-color);
-    margin: 1rem 0;
-}
-
-.contact .row {
+.about1 .box {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
-    margin: 8rem 0;
+    margin-top: 7rem;
+    margin-bottom: 7rem;
 }
 
-.contact .row .form-c input,
-textarea {
-    background: var(--min-color);
-    border: 0.1rem solid rgb(160, 160, 160);
-    padding: 1rem;
-    height: 4.5rem;
-    width: 100%;
-    margin: 0.7rem 0;
+.about1 .box .image img {
+    width: 414px;
+    height: 414px;
+    object-fit: cover;
+}
+
+.about1 .box .content {
+    margin-right: 15rem;
+}
+
+.about1 .box .content h2 {
+    color: #703BE7;
+    font-size: 3.5rem;
+}
+
+.about1 .box .content p {
     color: var(--th-color);
-    font-size: 1.9rem;
+    font-size: 2rem;
+    margin: 2rem 0;
 }
 
-.contact .row .form-c input[type="submit"] {
-    background: var(--sc-color);
-    cursor: pointer;
-    margin-bottom: 2rem;
-    color: var(--min-color);
-    border: 0.1rem solid var(--sc-color);
-}
-
-.contact .row .form-c input[type="submit"]:hover {
-    background: none;
-    color: var(--sc-color);
-}
-
-.contact .row .form-c textarea {
-    height: 15rem;
-    padding: 1rem;
+.about1 .box .content div {
+    color: var(--th-color);
+    font-size: 2.2rem;
 }
 
 .footer {
@@ -318,63 +284,105 @@ textarea {
 }
 
 .fill {
-    height: 200px;
+    height: 15px;
     background: linear-gradient(256.73deg, #1CBDDD 27.86%, #4DCA79 100%), linear-gradient(0deg, #FFFFFF, #FFFFFF);
 }
 
-
-/* media query  */
-
-@media(max-width:768px) {
-    header .fa-bars {
-        display: block;
-    }
-    header .navbar {
-        position: fixed;
-        /* */
-        top: 1000rem;
-        left: 0;
-        text-align: center;
-        background: rgba(10, 10, 9, 0.6);
-        width: 100%;
-    }
-    header .navbar.active {
-        top: 7.5rem;
-    }
-    header .navbar a {
-        display: block;
-        margin: 0.3rem 0;
-        padding: 1rem;
-        font-size: 2.6rem;
+@media (max-width: 1200px) {
+    .home .home-slid .box .content {
+        bottom: 20px;
+        left: 0px;
+        padding: 20px;
         color: var(--min-color);
+        text-align: left;
+        width: 50%;
+        height: 45%;
     }
-    header .navbar a:hover {
-        background: var(--min-color);
+    .home .home-slid .box .content {
+        padding-left: 20px;
     }
-    .about .box {
-        flex-wrap: wrap;
+    .home .home-slid .box .content a.btn {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #FFCA00;
+        color: #fff;
+        text-decoration: none;
+        font-size: 1.5rem;
+        margin-top: 5px;
+    }
+}
+
+@media (max-width: 768px) {
+    .home .home-slid .box {
+        height: auto;
+    }
+    .home .home-slid .box .content {
+        position: relative;
+        width: 100%;
+        padding: 20px;
+        text-align: center;
+        box-sizing: border-box;
+    }
+    .home .home-slid .box .content h3 {
+        font-size: 2.5rem;
+        margin-bottom: 10px;
+    }
+    .home .home-slid .box .content a.btn {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #FFCA00;
+        color: #fff;
+        text-decoration: none;
+        font-size: 1.2rem;
+        margin-top: 10px;
+    }
+    .home .home-slid .box .image {
+        width: 100%;
+        height: auto;
+    }
+    .about .box,
+    .about1 .box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        gap: 2rem;
+        margin-top: 7rem;
+        margin-bottom: 7rem;
+    }
+    .about .box .image img,
+    .about1 .box .image img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+    .about .box .content,
+    .about1 .box .content {
+        margin-left: 1rem;
+        margin-right: 1rem;
         text-align: center;
     }
-    .about .box .image img {
-        width: 90%;
+    .about .box .content h2,
+    .about1 .box .content h2 {
+        color: #703BE7;
+        font-size: 2.5rem;
     }
-    .services .row {
-        grid-template-columns: repeat(auto-fit, minmax(80%, 1fr));
+    .about .box .content p,
+    .about1 .box .content p {
+        color: var(--th-color);
+        font-size: 1.5rem;
+        margin: 2rem 0;
     }
-    .blog .row {
-        grid-template-columns: repeat(auto-fit, minmax(80%, 1fr));
-    }
-    .contact .row {
-        flex-flow: column;
-    }
-    .contact .row iframe {
-        width: 100%;
-    }
-    .footer {
-        grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
+    .about .box .content div,
+    .about1 .box .content div {
+        color: var(--th-color);
+        font-size: 1.8rem;
     }
     .footer div {
         flex-basis: 100%;
         max-width: 100%;
+    }
+    .fill {
+        height: 150px;
     }
 }
